--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -41,28 +41,38 @@
     <div class="box">
         <h2>CONTACT</h2>
         <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
+            <img src="../../assets/img/maps-location-svgrepo-com.svg" alt="">
             <p><a target="_blank" href="https://maps.app.goo.gl/Yyx3dW8AV4q5rH6r5">Bogotá, Colombia</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
-            <p><a  href="mailto:brayanpjaimes28@gmail.com">brayanpjaimes28</a></p>
+            <img src="../../assets/img/gmail-svgrepo-com.svg" alt="">
+            <p><a href="mailto:brayanpjaimes28@gmail.com">brayanpjaimes28@gmail.com</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
-            <p>red</p>
+            <img src="../../assets/img/github-one-svgrepo-com.svg" alt="">
+            <p><a target="_blank" href="https://github.com/darkelian/">@Darkelian</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
-            <p>red</p>
+            <img src="../../assets/img/linkedin-svgrepo-com.svg" alt="">
+            <p><a target="_blank" href="https://www.linkedin.com/in/elianjaimes/">@elianjaimes</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
-            <p>red</p>
+            <img src="../../assets/img/whatsapp-svgrepo-com.svg" alt="">
+            <p><a target="_blank" href="https://wa.me/573137675980">+57 3137675980</a></p>
         </div>
-        <div class="info">
-            <img src="../../assets/img/cuadrosinfondo.png" alt="">
-            <p>red</p>
-        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="box1"><img src="../../assets/img/zonatrabajosinfondo.png" alt=""></div>
+</div>
+<div class="container">
+    <div class="box">
+        <h2>HOBBITS</h2>
+    </div>
+    <div class="box">
+        <h2>EDUCATION</h2>
+    </div>
+    <div class="box">
+        <h2>SOFTWARE SKILLS</h2>
     </div>
 </div>
