--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -68,11 +68,72 @@
 <div class="container">
     <div class="box">
         <h2>HOBBITS</h2>
+        <div class="container-hobbits">
+            <div class="hobbit">
+                <img src="" alt="">
+            </div>
+            <div class="hobbit">
+                <img src="../../assets/img/music-1-svgrepo-com.svg" alt="">
+                <img src="../../assets/img/game-consol-svgrepo-com.svg" alt="">
+            </div>
+            <div class="text-hobbit">
+                <h3>Music</h3>
+                <h3>Videogames</h3>
+            </div>
+        </div>
+        <div class="container-hobbits">
+            <div class="hobbit">
+                <img src="" alt="">
+            </div>
+            <div class="hobbit">
+                <img src="../../assets/img/football-ball-svgrepo-com.svg" alt="">
+                <img src="../../assets/img/camera-left-svgrepo-com.svg" alt="">
+            </div>
+            <div class="text-hobbit">
+                <h3>Soccer</h3>
+                <h3>Photography</h3>
+            </div>
+        </div>
     </div>
     <div class="box">
         <h2>EDUCATION</h2>
+        <div class="experience">
+            <img src="../../assets/img/2024 sin fondo.png" alt="2024">
+            <div class="infow">
+                <h3>Uniersidad Distrital Francisco José de Caldas</h3>
+                <p>Systems engineer</p>
+            </div>
+        </div>
+        <div class="experience">
+
+            <img src="../../assets/img/2021 sin fondo.png" alt="2021">
+            <div class="infow">
+                <h3>Universidad industrial de Santander (IUS)</h3>
+                <p>Software development (Certificate)</p>
+            </div>
+        </div>
+        <div class="experience">
+            <img src="../../assets/img/2021 sin fondo.png" alt="2021">
+            <div class="infow">
+                <h3>Universidad industrial de Santander (IUS)</h3>
+                <p>Mobile application development (Certificate)
+                </p>
+            </div>
+        </div>
     </div>
     <div class="box">
         <h2>SOFTWARE SKILLS</h2>
+        <div class="skill">
+            <img src="../../assets/img/java-svgrepo-com.svg" alt="Java">
+            <img src="../../assets/img/spring-svgrepo-com.svg" alt="Spring boot">
+        </div>
+        <div class="skill">
+            <img src="../../assets/img/unity-svgrepo-com.svg" alt="Unity">
+            <img src="../../assets/img/dotnet-svgrepo-com.svg" alt=".Net">
+        </div>
+        <div class="skill">
+            <img src="../../assets/img/angular-svgrepo-com.svg" alt="Angular">
+            <img src="../../assets/img/python-svgrepo-com.svg" alt="Python">
+        </div>
     </div>
 </div>
