fix in path img

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,7 +5,7 @@
     <div class="box">
         <h2>WORK EXPERIENCE</h2>
         <div class="experience">
-            <img src="../../assets/img/2020 sin fondo.png" alt="2020">
+            <img src="assets/img/2020 sin fondo.png" alt="2020">
             <div class="infow">
                 <h3>FREELANCE</h3>
                 <p>Unity developer & Game and Application Designer & .NET developer & developer fullstack</p>
@@ -13,14 +13,14 @@
         </div>
         <div class="experience">
 
-            <img src="../../assets/img/2021 sin fondo.png" alt="2021">
+            <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
                 <h3>JSONPRODUCTIONS</h3>
                 <p>Unity developer & Game and Application Designer & .NET developer</p>
             </div>
         </div>
         <div class="experience">
-            <img src="../../assets/img/2022 sin fondo.png" alt="2022">
+            <img src="assets/img/2022 sin fondo.png" alt="2022">
             <div class="infow">
                 <h3>JORJWEB.LTDA</h3>
                 <p>Developer fullstack & developer backend Spring boot & Systems engineering assistant
@@ -30,7 +30,7 @@
     </div>
     <div class="box">
         <div class="container-img">
-            <img src="../../assets/img/Foto_portafolio-removebg-preview.png" alt="Elian Jaimes">
+            <img src="assets/img/Foto_portafolio-removebg-preview.png" alt="Elian Jaimes">
         </div>
         <p class="perfil">Merging technical skills and creativity, I aim to bring to life elegant and efficient software
             solutions. In
@@ -41,29 +41,29 @@
     <div class="box">
         <h2>CONTACT</h2>
         <div class="info">
-            <img src="../../assets/img/maps-location-svgrepo-com.svg" alt="">
+            <img src="assets/img/maps-location-svgrepo-com.svg" alt="">
             <p><a target="_blank" href="https://maps.app.goo.gl/Yyx3dW8AV4q5rH6r5">Bogotá, Colombia</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/gmail-svgrepo-com.svg" alt="">
+            <img src="assets/img/gmail-svgrepo-com.svg" alt="">
             <p><a href="mailto:brayanpjaimes28@gmail.com">brayanpjaimes28@gmail.com</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/github-one-svgrepo-com.svg" alt="">
+            <img src="assets/img/github-one-svgrepo-com.svg" alt="">
             <p><a target="_blank" href="https://github.com/darkelian/">@Darkelian</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/linkedin-svgrepo-com.svg" alt="">
+            <img src="assets/img/linkedin-svgrepo-com.svg" alt="">
             <p><a target="_blank" href="https://www.linkedin.com/in/elianjaimes/">@elianjaimes</a></p>
         </div>
         <div class="info">
-            <img src="../../assets/img/whatsapp-svgrepo-com.svg" alt="">
+            <img src="assets/img/whatsapp-svgrepo-com.svg" alt="">
             <p><a target="_blank" href="https://wa.me/573137675980">+57 3137675980</a></p>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="box1"><img src="../../assets/img/zonatrabajosinfondo.png" alt=""></div>
+    <div class="box1"><img src="assets/img/zonatrabajosinfondo.png" alt=""></div>
 </div>
 <div class="container">
     <div class="box">
@@ -73,8 +73,8 @@
                 <img src="" alt="">
             </div>
             <div class="hobbit">
-                <img src="../../assets/img/music-1-svgrepo-com.svg" alt="">
-                <img src="../../assets/img/game-consol-svgrepo-com.svg" alt="">
+                <img src="assets/img/music-1-svgrepo-com.svg" alt="">
+                <img src="assets/img/game-consol-svgrepo-com.svg" alt="">
             </div>
             <div class="text-hobbit">
                 <h3>Music</h3>
@@ -86,8 +86,8 @@
                 <img src="" alt="">
             </div>
             <div class="hobbit">
-                <img src="../../assets/img/football-ball-svgrepo-com.svg" alt="">
-                <img src="../../assets/img/camera-left-svgrepo-com.svg" alt="">
+                <img src="assets/img/football-ball-svgrepo-com.svg" alt="">
+                <img src="assets/img/camera-left-svgrepo-com.svg" alt="">
             </div>
             <div class="text-hobbit">
                 <h3>Soccer</h3>
@@ -98,7 +98,7 @@
     <div class="box">
         <h2>EDUCATION</h2>
         <div class="experience">
-            <img src="../../assets/img/2024 sin fondo.png" alt="2024">
+            <img src="assets/img/2024 sin fondo.png" alt="2024">
             <div class="infow">
                 <h3>Uniersidad Distrital Francisco José de Caldas</h3>
                 <p>Systems engineer</p>
@@ -106,14 +106,14 @@
         </div>
         <div class="experience">
 
-            <img src="../../assets/img/2021 sin fondo.png" alt="2021">
+            <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
                 <h3>Universidad industrial de Santander (IUS)</h3>
                 <p>Software development (Certificate)</p>
             </div>
         </div>
         <div class="experience">
-            <img src="../../assets/img/2021 sin fondo.png" alt="2021">
+            <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
                 <h3>Universidad industrial de Santander (IUS)</h3>
                 <p>Mobile application development (Certificate)
@@ -124,16 +124,16 @@
     <div class="box">
         <h2>SOFTWARE SKILLS</h2>
         <div class="skill">
-            <img src="../../assets/img/java-svgrepo-com.svg" alt="Java">
-            <img src="../../assets/img/spring-svgrepo-com.svg" alt="Spring boot">
+            <img src="assets/img/java-svgrepo-com.svg" alt="Java">
+            <img src="assets/img/spring-svgrepo-com.svg" alt="Spring boot">
         </div>
         <div class="skill">
-            <img src="../../assets/img/unity-svgrepo-com.svg" alt="Unity">
-            <img src="../../assets/img/dotnet-svgrepo-com.svg" alt=".Net">
+            <img src="assets/img/unity-svgrepo-com.svg" alt="Unity">
+            <img src="assets/img/dotnet-svgrepo-com.svg" alt=".Net">
         </div>
         <div class="skill">
-            <img src="../../assets/img/angular-svgrepo-com.svg" alt="Angular">
-            <img src="../../assets/img/python-svgrepo-com.svg" alt="Python">
+            <img src="assets/img/angular-svgrepo-com.svg" alt="Angular">
+            <img src="assets/img/python-svgrepo-com.svg" alt="Python">
         </div>
     </div>
 </div>
