--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -12,7 +12,6 @@
             </div>
         </div>
         <div class="experience">
-
             <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
                 <h3>JSONPRODUCTIONS</h3>
@@ -100,7 +99,7 @@
         <div class="experience">
             <img src="assets/img/2024 sin fondo.png" alt="2024">
             <div class="infow">
-                <h3>Uniersidad Distrital Francisco José de Caldas</h3>
+                <h3>Universidad Distrital Francisco José de Caldas</h3>
                 <p>Systems engineer</p>
             </div>
         </div>
@@ -108,14 +107,14 @@
 
             <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
-                <h3>Universidad industrial de Santander (IUS)</h3>
+                <h3>Universidad industrial de Santander (UIS)</h3>
                 <p>Software development (Certificate)</p>
             </div>
         </div>
         <div class="experience">
             <img src="assets/img/2021 sin fondo.png" alt="2021">
             <div class="infow">
-                <h3>Universidad industrial de Santander (IUS)</h3>
+                <h3>Universidad industrial de Santander (UIS)</h3>
                 <p>Mobile application development (Certificate)
                 </p>
             </div>
