--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -6,18 +6,22 @@
 }
 .container {
   padding: 25px;
-  display: flex;
+  display: block;
   justify-content: space-around;
+  img{
+    width: 100%;
+    height: 100%;
+  }
 }
 .box {
-  width: 30%;
+  width: 100%;
   height: 60vh;
-  display: block;
+  display: inline;
   justify-content: center;
   align-content: center;
   flex-direction: column;
   img {
-    width: 60%;
+    width: 30%;
   }
   .perfil {
     margin: 0px 20px;
@@ -31,27 +35,6 @@
   flex-direction: column;
   flex-wrap: wrap;
 }
-.experience {
-  display: flex;
-  img {
-    width: 20%;
-    height: 25%;
-    padding: 25px;
-  }
-}
-.infow {
-  width: 70%;
-}
-.info {
-  display: flex;
-  flex-direction: row;
-  height: 16.66%;
-  img {
-    width: 10%;
-    height: auto;
-    padding: 5px;
-  }
-}
 a {
   color: white;
   text-decoration: none;
@@ -61,44 +44,203 @@ p {
   display: flex;
   align-items: center;
 }
-.box1 {
-  img {
-    display: flex;
-    width: auto;
-    height: auto;
-  }
+@media (max-width:500px){
+  
 }
-.container-hobbits {
-  display: flex;
-  flex-direction: column;
-  h3 {
-    flex-direction: row !important;
-  }
-}
-.hobbit {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: center;
-  img {
-    width: 20%;
-    height: auto;
-  }
-}
-.text-hobbit {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: center;
-}
-.skill {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: center;
-  img {
-    width: 20%;
-    height: auto;
+@media (min-width: 980px) {
+  .container {
     padding: 25px;
+    display: flex;
+    justify-content: space-around;
+  }
+  .box {
+    width: 30%;
+    height: 60vh;
+    display: block;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    img {
+      width: 60%;
+    }
+    .perfil {
+      margin: 0px 20px;
+      text-align: center;
+    }
+  }
+  .container-img {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .experience {
+    display: flex;
+    img {
+      width: 20%;
+      height: 25%;
+      padding: 25px;
+    }
+  }
+  .infow {
+    width: 70%;
+  }
+  .info {
+    display: flex;
+    flex-direction: row;
+    height: 16.66%;
+    img {
+      width: 10%;
+      height: auto;
+      padding: 5px;
+    }
+  }
+  .box1 {
+    img {
+      display: flex;
+      width: auto;
+      height: auto;
+    }
+  }
+  .container-hobbits {
+    display: flex;
+    flex-direction: column;
+    h3 {
+      flex-direction: row !important;
+    }
+  }
+  .hobbit {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    img {
+      width: 20%;
+      height: auto;
+    }
+  }
+  .text-hobbit {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+  }
+  .skill {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    img {
+      width: 20%;
+      height: auto;
+      padding: 25px;
+    }
+  }
+  @media (max-width: 1250px) {
+    .title {
+      height: 15vh;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+    }
+    .container {
+      padding: 25px;
+      display: flex;
+      justify-content: space-around;
+    }
+    .box {
+      width: 30%;
+      height: 60vh;
+      display: block;
+      justify-content: center;
+      align-content: center;
+      flex-direction: column;
+      img {
+        width: 60%;
+      }
+      .perfil {
+        margin: 0px 20px;
+        text-align: center;
+      }
+    }
+    .container-img {
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      flex-direction: column;
+      flex-wrap: wrap;
+    }
+    .experience {
+      display: flex;
+      img {
+        width: 20%;
+        height: 25%;
+        padding: 25px;
+      }
+    }
+    .infow {
+      width: 70%;
+    }
+    .info {
+      display: flex;
+      flex-direction: row;
+      height: 16.66%;
+      img {
+        width: 10%;
+        height: auto;
+        padding: 5px;
+      }
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    p {
+      display: flex;
+      align-items: center;
+    }
+    .box1 {
+      img {
+        display: flex;
+        width: auto;
+        height: auto;
+      }
+    }
+    .container-hobbits {
+      display: flex;
+      flex-direction: column;
+      h3 {
+        flex-direction: row !important;
+      }
+    }
+    .hobbit {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-content: center;
+      img {
+        width: 20%;
+        height: auto;
+      }
+    }
+    .text-hobbit {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-content: center;
+    }
+    .skill {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-content: center;
+      img {
+        width: 20%;
+        height: auto;
+        padding: 25px;
+      }
+    }
   }
 }
